# core

./: .gitignore  .gitlab-ci.yml  .mailmap  AUTHORS  Bridges.md  DataTypes.md  Executor.Microk8s.md  Executor.md  Makefile  Mantikfile.md  Readme.md  Readme.rst  Samples.md  build.sbt  make_in_docker.sh
bridge/sklearn/simple_learn/: .dockerignore  Dockerfile  Makefile  MantikHeader  Mantikfile  Pipfile  algorithm_wrapper.py  build.sh  create_docker_images.sh  main.py  push_docker.sh  pyproject.toml  requirements.txt  smoke_test.sh  test.sh  test_hello.py  update_requirements.sh
bridge/sklearn/simple_learn/example/kmeans/: MantikHeader  Mantikfile
bridge/sklearn/simple_learn/example/kmeans/code/: algorithm.py
bridge/sklearn/simple_learn/example/kmeans/payload/: algorithm.py
bridge/sklearn/simple_learn/example/multiply/: Mantikfile
bridge/sklearn/simple_learn/example/multiply/code/: algorithm.py
bridge/sklearn/simple_learn/example/multiply/payload/: algorithm.py
bridge/sklearn/simple_learn/mantik/: __init__.py  bundle.py  function_type.py  mantik_file.py  test_bundle.py
bridge/tf/train/: .dockerignore  Dockerfile  Makefile  Mantikfile  Pipfile  algorithm_wrapper.py  create_docker_images.sh  main.py  pyproject.toml  pytest.ini  test_training.py  train_run.py
bridge/tf/train/example/factor/: MantikHeader  Mantikfile
bridge/tf/train/example/factor/code/: train.py
bridge/tf/train/example/factor/payload/: train.py
bridge/tf/train/example/mnist_linear/: MantikHeader  Mantikfile
bridge/tf/train/example/mnist_linear/code/: model.py  train.py
bridge/tf/train/example/mnist_linear/payload/: model.py  train.py
bridge/tf/train/tftrain/: __init__.py  context.py  tensorflow_context.py  tensorflow_conversion.py  tensorflow_training_request.py  test_tensorflow_conversion.py  train_request.py
doc/: Architecture.md  Bridges.md  Building.md  CLI.md  DSL.md  DataTypes.md  Executor.Docker.md  Executor.md  GettingStarted.md  Glossary.md  Makefile  MantikHeader.md  MantikId.md  Mantikfile.md  Minikube.md  Mnp.md  Samples.md  Sql.md  build.sh  conf.py  mantik_dsl_snippet.py  pyproject.toml  requirements.txt
doc/_templates/: sidebar.html
doc/demo/: call_deployment.sh
doc/images/: Readme.md
examples/python/: mantik_client.py  mantik_train_algorithm.py  pyproject.toml  show_csv.py  utils.py
mnp/mnppython/: .gitignore  Makefile  Pipfile  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
mnp/mnppython/mnp/: __init__.py  collectable_byte_buffer.py  elements.py  forwarder.py  handler.py  mnp_url.py  rpc_converter.py  server.py  service_server.py  session_handler.py  streammultiplexer.py
mnp/mnppython/mnp/_stubs/mantik/mnp/: mnp_pb2.py  mnp_pb2_grpc.py
mnp/mnppython/tests/: dummy_handler.py  test_data_roundtrip.py  test_mnp_roundtrip.py  test_mnp_url.py  test_streammultiplexer.py
python_sdk/: .gitignore  Makefile  Makefile.mantik_dev_image  Pipfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  update_protobuf.sh
python_sdk/examples/: hello_world.py  mantik_client.py  mantik_train_algorithm.py
python_sdk/mantik/: __init__.py  types.py
python_sdk/mantik/bridge/: __init__.py  algorithm.py  bridge_app.py  mnp_bridge_app.py  mnp_bridge_handler.py  mnp_session_handlers.py
python_sdk/mantik/bridge/_stubs/mantik/bridge/: bridge_pb2.py
python_sdk/mantik/bridge/kinds/: __init__.py  algorithm.py  bridge.py  dataset.py
python_sdk/mantik/engine/: __init__.py  compat.py  convert.py  csv.py  engine.py  objects.py
python_sdk/mantik/model/: __init__.py  _sklearn_compat.py
python_sdk/mantik/util/: __init__.py  zip.py
python_sdk/tests/: test_bundle.py  test_mantikfile.py  test_mantikheader.py  test_meta_json.py  test_mnp_bridge_handler.py  test_util.py
python_sdk/tests/unit/bridge/: test_mnp_bridge_handler_.py
(+1601 files in other folders)
